# python-packaging-examples

./: .gitignore  README.md  cleanup_builds.py
01_setuppy_legacy/: README.md  setup.py
01_setuppy_legacy/hello_world/: __init__.py  __main__.py
02_setupcfg_legacy/: README.md  setup.cfg  setup.py
02_setupcfg_legacy/hello_world/: __init__.py  __main__.py
03_setupcfg_setuptools_modern/: README.md  setup.cfg
03_setupcfg_setuptools_modern/hello_world/: __init__.py  __main__.py
04_pyproject_setuptools/: README.md  pyproject.toml
04_pyproject_setuptools/hello_world/: __init__.py  __main__.py
05_poetry/: README.md  pyproject.toml
05_poetry/hello_world/: __init__.py  __main__.py
