[metadata]
name = hello_world
version = attr: hello_world.__version__
author = John Smith
description = Hello World example
long_description = file: README.md
long_description_content_type = text/markdown
keywords = hello, world
url = 
classifiers =
        Programming Language :: Python :: 3
        License :: OSI Approved :: GNU General Public License v3 (GPLv3)
        Operating System :: OS Independent
        Natural Language :: English
        Topic :: Utilities

[options]
packages = hello_world
python_requires = >=3.6
install_requires = 

[options.entry_points]
console_scripts = 
    hello_world = hello_world.__main__:cli