[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "hello_world"
authors = [
        {name = "John Smith"}
]
description = "Hello World Example"
readme = "README.md"
keywords = ["hello", "world"]
license = {text = "GPLv3"}
dynamic = ["version"]
classifiers = [
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Operating System :: OS Independent",
        "Natural Language :: English",
        "Topic :: Utilities"
]
dependencies = [
]

[tool.setuptools.dynamic]
version = {attr = "hello_world.__version__"}

[project.scripts]
hello_world = "hello_world.__main__:cli"